# kpi-operations

./: .dockerignore  .editorconfig  .env.example  .env.prod.example  .flake8  .gitignore  .mcp.json.example  .pre-commit-config.yaml  .secrets.baseline  00-KPI_Dashboard_Platform.md  01-Core_DataEntities_Inventory.csv  04-Phase3_Attendance_Inventory.csv  AUDIT_REPORT_FINAL.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_STATUS.md  Dockerfile  KPI_Project_Roadmap.md  LAUNCH_GUIDE.md  LICENSE  Metrics.xlsx  QUICKSTART.md  README.md  SPRINTS_1_2_3_COMPLETE.md  coverage.xml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml
.claude/: settings.json  settings.local.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.claude/commands/: cross-review.md
.claude/hooks/: post-bash.sh  post-edit.sh  pre-bash.sh  pre-edit.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  e2e.yml
.hive-mind/: config.json
_archive/docs/: DEPLOYMENT_SUMMARY.md
_archive/frontend_components/: CSVUpload.vue  ProductionKPIs.vue  QualityKPIs.vue
_archive/frontend_config/: keyboardShortcuts.js
_archive/run2/: DowntimeEntry.vue  HoldEntry.vue  useToast.js
_audit/: B1-permissive-assertions-categorized.md  B1-permissive-inventory-raw.txt  B3-zero-coverage-views.md  B5-test-pollution.md  Follow_up_hardening.md  PHASE-B-C-PRODUCTION-VERIFIED.md  PHASE-B-FINAL.md  PHASE-C-BRANCH-PROTECTION.md  PHASE-C-FINAL.md
backend/: .coveragerc  .env.example  VIRTUAL_ENV_SETUP.md  alembic.ini  config.py  constants.py  coverage.xml  database.py  dependencies.py  main.py  requirements-dev.txt  requirements.txt
backend/_archive/: attendance_service.py  batch_import.py  downtime_service.py
backend/alembic/: env.py
backend/auth/: jwt.py  password.py  password_policy.py  role_rules.py
backend/bootstrap/: app_config.py  lifecycle.py  openapi.py  routers.py
backend/cache/: __init__.py  kpi_cache.py
backend/calculations/: absenteeism.py  alerts.py  availability.py  dpmo.py  efficiency.py  elapsed_time.py  fpy_rty.py  inference.py  otd.py  performance.py  ppm.py  predictions.py  production_line_simulation.py  simulation.py  trend_analysis.py  wip_aging.py  workflow_engine.py
backend/crud/: analytics.py  attendance.py  break_time.py  client.py  client_config.py  coverage.py  defect_detail.py  defect_type_catalog.py  downtime.py  employee.py  employee_line_assignment.py  equipment.py  floating_pool.py  hold.py  hold_catalog.py  job.py  part_opportunities.py  preferences.py  production.py  production_line.py  quality.py  saved_filter.py  shift.py  simulation_scenario.py  work_order.py  workflow.py
backend/db/: __init__.py  config.py  factories.py  factory.py  import_log_table.sql  migrate.py  sql_functions.py  state.py
backend/docs/: CODE_CONVENTIONS.md  DOMAIN_MODEL.md  KPI_FORMULAS.md  WORKFLOW_STATES.md
backend/endpoints/: batch_import.py  csv_upload.py
backend/events/: __init__.py  base.py  bus.py  domain_events.py  session_hooks.py
backend/exceptions/: __init__.py  domain_exceptions.py
backend/generators/: __init__.py  sample_data_phase5.py
backend/middleware/: __init__.py  audit_log.py  client_auth.py  rate_limit.py  security_headers.py  write_access.py
backend/migrations/: phase2_junction_tables.sql
backend/models/: __init__.py  alert.py  attendance.py  client.py  client_config.py  coverage.py  defect_detail.py  defect_type_catalog.py  downtime.py  employee.py  employee_line_assignment.py  filters.py  floating_pool.py  hold.py  hold_catalog.py  import_log.py  job.py  kpi_threshold.py  part_opportunities.py  preferences.py  production.py  production_line.py  qr.py  quality.py  shift.py  user.py  work_order.py  workflow.py
backend/orm/: __init__.py  alert.py  analytics.py  attendance_entry.py  break_time.py  client.py  job.py  (+34 more)
config/: mcp.example.json
database/: create_demo_users.py  init_schema.py  init_sqlite_schema.py  schema.sql  schema_complete_multitenant.sql  seed_data.sql
deploy/: init-data-root.sh  preflight.sh  vm-bootstrap.sh
docs/: 02-Phase1_Production_Inventory.csv  05-Phase4_Quality_Inventory.csv  ACCESSIBILITY_AUDIT_REPORT.md  AGGRID_USAGE_EXAMPLES.md  AG_GRID_IMPLEMENTATION_SUMMARY.md  ANALYTICS_API_DOCUMENTATION.md  API_DOCUMENTATION.md  ARCHITECTURE.md  COMPREHENSIVE_VALIDATION_REPORT.md  CONTRIBUTING.md  CRITICAL_SCHEMA_AUDIT_REPORT.md  CRUD_UIUX_AUDIT_REPORT.md  CSV_UPLOAD_ENDPOINTS.md  CSV_UPLOAD_IMPLEMENTATION.md  DATABASE_AUDIT_REPORT.md  DATA_INTEGRITY_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_VALIDATION_REPORT.md  ENTERPRISE_READY_CERTIFICATION.md  FINAL_AUDIT_SUMMARY.md  GAP_ANALYSIS_VS_SPECIFICATION.md  HIVE_MIND_DEPLOYMENT_COMPLETE.md  HIVE_MIND_SECURITY_FIX_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  KPI_Challenge_Context.md  KPI_Summary.md  LAUNCH_GUIDE_FINAL.md  MANUFACTURING_USER_SCENARIOS.md  MCP_VALIDATION_REPORT.md  Metrics_Sheet1.csv  OPERATIONS_HEALTH_DASHBOARD_DESIGN.md  PHASE1_AUDIT_REPORT.md  PHASE2_AUDIT_REPORT.md  PHASES_2-5_IMPLEMENTATION.md  PILOT_DEPLOYMENT_PLAN.md  PRODUCTION_CRUD_SECURITY_UPDATE.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_ALIGNMENT_ANALYSIS.md  (+22 more)
frontend/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  TASK_3.1_COMPLETION_SUMMARY.md  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  playwright.render.config.ts  playwright.sqlite.config.ts  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
memory/: claude-flow@alpha-data.json
scripts/: check-skipped-tests.sh  cross-review-gate.sh  cross-review-mark.sh  deploy.sh  fix_all_imports.py  fix_crud_imports.py  fix_imports.py  lock-deps.sh  mcp-health-check.sh  run_production_validation.sh  start-all.sh  start-backend.sh  start-frontend.sh
tests/: INTEGRATION_TEST_EXECUTION_REPORT.md  README.md  SECURITY_TEST_VALIDATION_REPORT.md  TEST_README.md  __init__.py  conftest.py  test_analytics_api.py  test_trend_analysis.py  vitest.config.js
(+1564 files in other folders)
