[project]
name = "kpi-operations"
version = "1.1.0"
description = "Enterprise manufacturing KPI tracking and analytics platform"
requires-python = ">=3.11"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    _archive
    | migrations
    | venv
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Phase 1 stricter flags. Cheap wins that catch real bugs:
# - warn_unused_ignores: flag stale `# type: ignore` comments so the
#   suppressions don't outlive the bug they were silencing
# - warn_redundant_casts: flag `cast(X, x)` where x is already X
# - strict_equality: flag `x == y` when the operand types can't
#   overlap (e.g. datetime vs. str — always False, almost always a bug)
# - warn_no_return: functions declared to return X must reach a return
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
warn_no_return = true
# Phase 2: type-check the bodies of unannotated functions too.
# Without this, mypy silently skips bodies of `def foo(x):` (no
# return annotation), which lets bugs hide in legacy untyped helpers.
check_untyped_defs = true
# Phase 3: every function must declare param + return types. Catches
# the case where a function body type-checks fine in isolation but
# was returning the wrong type compared to what callers expect.
disallow_untyped_defs = true
# Required so `from backend.X import ...` resolves correctly when mypy is
# invoked from the project root with `mypy backend`. Without these flags mypy
# either bails ("Source file found twice") or silently treats every cross-
# module backend.* import as Any (because of ignore_missing_imports), which
# masks ~700 real type errors as a single soft "511" floor.
namespace_packages = true
explicit_package_bases = true
# Pydantic v2 mypy plugin: makes `field: Optional[X] = Field(None, ...)`
# resolve as a non-required argument (mypy without the plugin treats Field()
# as a non-default and demands the field be passed at every call site).
plugins = ["pydantic.mypy"]
exclude = [
    "_archive/",
    "migrations/",
    "venv/",
]

# Test files use Mock/MagicMock heavily and have many fixtures whose
# return types are deliberately loose. Type-checking the bodies of
# unannotated test helpers floods the gate with mock-vs-real-signature
# noise that doesn't catch real bugs. Disable check_untyped_defs and
# disallow_untyped_defs for the test tree only — production code keeps
# the strict gate. Annotating ~5000 test functions would be churn
# that doesn't catch new bugs (mocks return Any anyway).
[[tool.mypy.overrides]]
module = "backend.tests.*"
check_untyped_defs = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
# THE single pytest configuration (Run 7 T0.3). The former
# backend/tests/pytest.ini shadowed this section in CI (pytest config
# discovery found it first), which (a) deactivated `pythonpath` — forcing the
# PYTHONPATH=.. workaround — and (b) its blanket `ignore::DeprecationWarning`
# swallowed the Pydantic/SQLAlchemy regression guards below (both are
# DeprecationWarning subclasses). Do not reintroduce a pytest.ini/setup.cfg
# below this file.
minversion = "7.0"
# Project root added to sys.path so `from backend.X import ...` resolves without
# manual sys.path.insert in conftest.py.
pythonpath = ["."]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Coverage source/omit/fail_under live in backend/.coveragerc — the file
# coverage.py actually reads when pytest runs from backend/ (Run 7 T0.2).
# Plain `--cov` (no path) defers the measured pool to that file.
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "-ra",
    "--maxfail=10",
]
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests with database",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
# pytest-asyncio loop scope explicit pin (was implicitly "function" via
# pytest-asyncio < 1.0 default). 1.x removes the default and emits a
# PytestDeprecationWarning when unset. Pinning here keeps async fixture
# lifecycle deterministic across pytest-asyncio upgrades.
asyncio_default_fixture_loop_scope = "function"
# Filter order matters: pytest applies the LAST matching filter, so the two
# specific `error::` guards must stay below the blanket ignores to win.
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # Third-party libraries routinely emit DeprecationWarnings we cannot fix;
    # blanket-ignore them, then re-promote the two classes we guard against.
    "ignore::DeprecationWarning",
    # python-multipart 0.0.27 still warns when starlette imports the legacy
    # `multipart` package name instead of `python_multipart`. Upstream
    # starlette hasn't migrated yet; suppress to keep `-W error` usable in
    # CI without spurious failures.
    "ignore:Please use `import python_multipart`:PendingDeprecationWarning",
    # The codebase is fully migrated off Pydantic V1 patterns (class-based
    # Config, .from_orm(), .dict(), .parse_obj(), @validator). Promote any
    # future V1-pattern regression to a hard CI failure so it can't slip
    # back in via a copy-paste from old code. If a new Pydantic upgrade
    # legitimately requires a deprecation suppression, document it inline.
    "error::pydantic.PydanticDeprecatedSince20",
    # SQLAlchemy 2.0-style imports are the only supported path in the
    # codebase. `declarative_base()` resolves from `sqlalchemy.orm` (not
    # the legacy `sqlalchemy.ext.declarative`). Promote any reintroduction
    # of the V1.x import path to a hard CI failure.
    "error::sqlalchemy.exc.MovedIn20Warning",
]
